--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -36,7 +36,7 @@
 \title{Towards Certified Management of Financial Contracts
 \thanks{Work partially supported by DSF grant No.\jbcomment{yaddayadda} (\textsc{Hiperfit})}}
 
-%\titlerunning{Symb.Contract Manipulation for FX Options}
+\titlerunning{Towards Certified Management of Financial Contracts}
 
 \author{Patrick Bahr
     \and
