remove formal treatment section
Instead of a dedicated section, we comment on the "formal treatment"
throughout the paper.

--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -145,8 +145,9 @@ What do we want to do with contracts?
 - Transform contracts
 - Advancing a contract (reduction semantics of contracts).
 
-\subsection{Formal Treatment}
-\label{sec:properties}
+\subsection{Reduction Semantics}
+\label{sec:reduction-semantics}
+
 
 Apart from the denotational semantics our contract language is also
 equipped with a reduction semantics, which advances a contract by one
